--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -17,12 +17,13 @@ serde_json = { version = "1.0.79", default-features = false, features = ["alloc"
 
 # substrate
 frame-metadata = { default-features = false, git = "https://github.com/paritytech/frame-metadata", features = ["v14", "serde_full", "decode"] }
-sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+sp-runtime = { default-features = false, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+sp-storage = { default-features = false, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
 
 # need to add this for `no_std`
-sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", features = ["full_crypto"], branch = "master" }
-sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-application-crypto = { default-features = false, git = "https://github.com/haerdib/substrate.git", features = ["full_crypto"], branch = "add-serde-feature-to-primitives" }
+sp-runtime-interface = { default-features = false, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
 
 # local
 ac-primitives = { path = "../primitives", default-features = false }
@@ -47,6 +48,7 @@ std = [
     "frame-metadata/std",
     "sp-core/std",
     "sp-runtime/std",
+    "sp-storage/std",
     # no_std support
     "sp-application-crypto/std",
     "sp-runtime-interface/std",
