--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -15,20 +15,21 @@ serde = { version = "1.0", default-features = false, features = ["derive", "allo
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 # substrate no_std
-sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-core = { default-features = false, features = ["full_crypto", "serde"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+sp-runtime = { default-features = false, features = ["full_crypto", "serde"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+sp-staking = { default-features = false, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+sp-version = { default-features = false, features = ["serde"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+sp-weights = { default-features = false, features = ["serde"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
 
 # substrate std / wasm only
-frame-system = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-pallet-assets = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-pallet-balances = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-pallet-contracts = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-pallet-staking = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+frame-system = { optional = true, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+pallet-assets = { optional = true, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+pallet-balances = { optional = true, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+pallet-contracts = { optional = true, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
+pallet-staking = { optional = true, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
 
 [dev-dependencies]
-node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+node-template-runtime = { git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
 
 [features]
 default = ["std"]
@@ -44,6 +45,7 @@ std = [
     "sp-runtime/std",
     "sp-staking/std",
     "sp-version/std",
+    "sp-weights/std",
     # substrate std
     "frame-system",
     "pallet-assets",
